fix: 테스트 코드 어드민대시보드 부분 수정